--- a/MusicApp/app/src/main/res/values-fr/strings.xml
+++ b/MusicApp/app/src/main/res/values-fr/strings.xml
@@ -7,5 +7,6 @@
   <string name="buy">acheter</string>
   <string name="play">jouer</string>
   <string name="pay_method">Mode de paiement</string>
+  <string name="list_music">Liste de la musique</string>
 
 </resources>
